# QCBM

./: Makefile  README.md  mypy.ini  pyproject.toml
qcbm/: Currency Pair Experiment Example.ipynb  __init__.py  adam.py  born_machine.py  currency_pair_loader.py  discriminator.py  experiment.py  extra.py  sinkhorn.py  training_loop.py
tests/: test_adam.py  test_currency_pair_loader.py  test_sinkhorn.py
