[tool.poetry]
name = "qcbm"
version = "4.2.0"
description = "Quantum Circuit Born Machine"
authors = []
packages = [{include = "qcbm"}]
include = ["qcbm/currency_pairs.csv.gz"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
fire = "^0.4.0"
numpy = "^1.21.3"
pandas = "^1.3.0"
pyquil = "^3.0.0"
scikit-learn = "^1.0.0"
scipy = "^1.7.1"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"
flake8-black = "^0.2.3"
flake8-bugbear = "^21.9.2"
flake8-import-order = "^0.18.1"
hypothesis = {extras = ["numpy"], version = "^6.23.4"}
matplotlib = "^3.4.3"
mypy = "^0.910"
notebook = "^6.4.5"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
seaborn = "^0.11.2"

[tool.poetry.scripts]
experiment = "qcbm.experiment:cli"

[tool.black]
line-length = 120
target-version = ["py38"]
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # black-default
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
